prevent composer collapse in between 936 and 360+768 px

--- a/css/stylus/Pages/MessagesPage.styl
+++ b/css/stylus/Pages/MessagesPage.styl
@@ -63,6 +63,8 @@ messages-page
       .btn-send
         right 16px
         bottom 16px
+    @media screen and (min-width break-tablet) and (max-width 936px)
+      margin-left 16px
     bar
       height 40px
       display flex
